# DumbESPty

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  SPEC.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.pre-eco2
components/microlink/: CMakeLists.txt
components/microlink/components/wireguard_lwip/: README.md
components/microlink/components/wireguard_lwip/src/: wireguardif.c
components/microlink/include/: microlink.h  microlink_internal.h
components/microlink/src/: microlink.c  ml_coord.c  ml_derp.c  ml_noise.c  ml_wg_mgr.c
main/: CMakeLists.txt  ble_hid_host.cpp  ble_hid_host.hpp  ble_hid_host_stub.cpp  ch422g_init.cpp  ch422g_init.hpp  coex_manager.cpp  coex_manager.hpp  coex_manager_stub.cpp  console_base.cpp  hostname_mgr.cpp  hostname_mgr.hpp  idf_component.yml  power_mgr.cpp  power_mgr.hpp  secret_vault.cpp  secret_vault.hpp  shell.cpp  shell.hpp  ssh_client.cpp  ssh_client.hpp  tailscale_mgr.cpp  tailscale_mgr.hpp  terminal.cpp  terminal.hpp  touch_init.hpp  ui_status_menu.cpp  ui_status_menu.hpp  usb_hid_host.cpp  usb_hid_host.hpp  waveshare_display.cpp  waveshare_display_p4.cpp  wifi_mgr.cpp  wifi_mgr.hpp
main/fonts/: cozette_bdf.h  cozette_bdf_13.c  lv_font_nerd_symbols_10.c  lv_font_term_mono_10.c
main/include/: ch422g_init.hpp  waveshare_display.hpp
test/ssh/server/: .gitignore  Dockerfile  README.md  docker-compose.yml  down.sh  entrypoint.sh  rotate-hostkey.sh  status.sh  up.sh
test/unit/: CMakeLists.txt  README.md  run.sh  test_hostname.cpp  test_power_mgr.cpp  test_ssh_helpers.cpp  test_support.hpp  test_terminal.cpp  test_usb_hid.cpp
test/unit/mocks/: esp_err.h  esp_heap_caps.h  esp_intr_alloc.h  esp_log.h  esp_mac.h  esp_random.h  esp_timer.h  libssh2.h  lvgl.h  nvs.h  stubs_esp.cpp  stubs_firmware.cpp  stubs_freertos.cpp  stubs_lvgl.cpp  stubs_ssh.cpp
test/unit/mocks/freertos/: FreeRTOS.h  idf_additions.h  queue.h  semphr.h  task.h
test/unit/mocks/lwip/: inet.h  netdb.h  sockets.h
test/unit/mocks/mbedtls/: base64.h  ctr_drbg.h  entropy.h  pk.h  rsa.h
test/unit/mocks/netinet/: tcp.h
test/unit/mocks/usb/: hid_host.h  usb_host.h
